# epoxy

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  epoxy.sublime-project
.github/workflows/: cmake.yml  linux.yml  mac.yml  windows.yml
editor/: epoxy.tmLanguage
example/: CMakeLists.txt  README.md  cxx.template.epoxy  cxx_impl.template.epoxy  cxx_interface.template.epoxy  dart.template.epoxy  hello.cc  hello.epoxy
example/dart/: .gitignore  main.dart  pubspec.yaml
example/dart/lib/: bindings.dart
example/hello/: CMakeLists.txt  hello.c  hello.h
example/tools/: epoxy.cmake
source/: CMakeLists.txt  code_gen.cc  code_gen.h  code_gen_cxx.cc  code_gen_cxx.h  code_gen_dart.cc  code_gen_dart.h  code_gen_unittests.cc  command_line.cc  command_line.h  decls.h  driver.cc  driver.h  driver_unittests.cc  epoxy.l  epoxy.y  epoxy_main.cc  file.cc  file.h  file_unittests.cc  fixture.h.in  macros.h  main.cc  scanner.cc  scanner.h  sema.cc  sema.h  sema_unittests.cc  types.cc  types.h  version.h
source/fixtures/: error1_1.epoxy  error3_1.epoxy  error3_3.epoxy  error51_12.epoxy  error84_24.epoxy
tools/: grammar.cmake  platform_selection.cmake
